--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -53,41 +53,6 @@ html::-webkit-scrollbar {
     font-weight: 800;
 }
 
-.mirko {
-    z-index: 1;
-    /* overflow-y: scroll;
-    width: 100%;
-    height: 100%;
-    scroll-behavior: smooth; */
-}
-
-/*TEST*/
-.mobile_list_wrap {
-    z-index: 999;
-    padding-top: 50px;
-    position: fixed;
-    display: block;
-    top: 0px;
-    bottom: 0px;
-    right: -240px;
-    width: 240px;
-    height: 100%;
-    -webkit-transition: -webkit-transform 0.2s ease-out;
-    -moz-transition: -moz-transform 0.2s ease-out;
-    -ms-transition: -ms-transform 0.2s ease-out;
-    -o-transition: -o-transform 0.2s ease-out;
-    transition: transform 0.2s ease-out;
-}
-
-.mobile_list_wrap1 {
-    height: 100%;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    width: 110%;
-    text-align: right;
-    padding: 15px 30px 30px 30px;
-}
-
 .videoCover_1 {
     background-attachment: fixed;
     background-position: center;
@@ -115,54 +80,29 @@ html::-webkit-scrollbar {
     z-index: 2;
 }
 
-body>header>div>nav>a {
-    font-family: 'Josefin Sans', sans-serif !important;
-    color: white !important;
-    font-size: 25px !important;
-    text-shadow: 1px 1px black;
-}
-
-#Data1>article>div>div>h1 {
-    font-family: 'Josefin Sans', sans-serif !important;
-    color: white !important;
-    font-size: 55px !important;
-    text-shadow: 1px 1px black;
-}
-
-#Data1>div>article>div>div>div>div>button {
-    border-radius: 50px;
-    /* background: transparent; */
-    width: 60px;
-    height: 50px;
-}
-
-#Data1>div>article>div>div>div>div>button:hover {
-    background: #0000008a;
-}
-
-#Data1>div>article>div>div>div>div>button>a {
-    color: white;
-    font-weight: bold;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
 /* Section Images */
+#Data1 {
+    display: flex;
+    width: 100%;
+    height: 1000px;
+    padding: 100px 0;
+    text-align: center;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    filter: brightness(75%);
+    background: url(../images/pexels-pixabay-326268.jpg) no-repeat center center/cover; 
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
 
 #Data3 {
-    background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover;
-    /* background-color: blue; */
+    /* background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover; */
+    background-color: black;
 }
 
 #Data6 {
-    background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover;
+    /* background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover; */
 }
 
 .carouselWrapper {
@@ -200,10 +140,6 @@ body>header>div>nav>a {
     margin-left: 0;
 }
 
-body>header>div.container-fluid.p-0.m-0>nav {
-    box-shadow: 0px 1px 10px 4px #0000005c
-}
-
 .bg-dark {
     background-color: #120f11 !important;
 }
@@ -227,50 +163,11 @@ body>header>div.container-fluid.p-0.m-0>nav {
     padding-left: 0;
 }
 
-#header.header-transparent {
-    background: transparent;
-}
 
-#header.header-scrolled {
-    background: rgba(31, 31, 36, 0.9);
-    height: 70px;
-}
+/*---------
+# Menu
+---------*/
 
-
-/*--------------------------------------------------------------
-# Menu Section
---------------------------------------------------------------*/
-#menu-flters {
-    padding: 0;
-    margin: 0 auto 0 auto;
-    list-style: none;
-    text-align: center;
-    border-radius: 50px;
-}
-
-
-#menu-flters li {
-    cursor: pointer;
-    display: inline-block;
-    padding: 8px 12px 10px 12px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-    color: #fff;
-    margin-bottom: 10px;
-    transition: all ease-in-out 0.3s;
-    border-radius: 50px;
-    font-family: "Playfair Display", serif;
-}
-
-#menu-flters li:hover,
-#menu-flters li.filter-active {
-    color: #cda45e;
-}
-
-#menu-flters li:last-child {
-    margin-right: 0;
-}
 
 .menu-item {
     margin-top: 50px;
@@ -293,13 +190,10 @@ body>header>div.container-fluid.p-0.m-0>nav {
 }
 
 .menu-content::after {
-    content: "----------------------------------------------------------------"
-        "---------------------------------------------------------------------"
-        "---------------------------------------------------------------------";
+    content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
+        "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
+        "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
     position: absolute;
-    /* left: 20px;
-    right: 0;
-    top: -4px; */
     z-index: 1;
     color: #bab3a6;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -329,7 +223,7 @@ body>header>div.container-fluid.p-0.m-0>nav {
     color: #cda45e;
 }
 
-.menu-ingredients {
+.menu-desc {
     margin-left: 85px;
     font-style: italic;
     font-size: 14px;
@@ -341,8 +235,9 @@ body>header>div.container-fluid.p-0.m-0>nav {
     margin-bottom: 20px;
 }
 
-
-/*TEST custom nav */
+/*-------------------------
+# Hamburger custom nav
+---------------------------*/
 
 .main-menu {
     width: 100%;
@@ -379,78 +274,6 @@ body>header>div.container-fluid.p-0.m-0>nav {
     transform: translateY(0px);
     -webkit-transition: -webkit-transform .2s, opacity .2s;
     transition: transform .2s, opacity .2s;
-}
-
-.main-menu .nav li.delay-1 {
-    -webkit-transition-delay: 0.1s;
-    -moz-transition-delay: 0.1s;
-    -ms-transition-delay: 0.1s;
-    -o-transition-delay: 0.1s;
-    transition-delay: 0.1s;
-}
-
-.main-menu .nav li.delay-2 {
-    -webkit-transition-delay: 0.2s;
-    -moz-transition-delay: 0.2s;
-    -ms-transition-delay: 0.2s;
-    -o-transition-delay: 0.2s;
-    transition-delay: 0.2s;
-}
-
-.main-menu .nav li.delay-3 {
-    -webkit-transition-delay: 0.3s;
-    -moz-transition-delay: 0.3s;
-    -ms-transition-delay: 0.3s;
-    -o-transition-delay: 0.3s;
-    transition-delay: 0.3s;
-}
-
-.main-menu .nav li.delay-4 {
-    -webkit-transition-delay: 0.4s;
-    -moz-transition-delay: 0.4s;
-    -ms-transition-delay: 0.4s;
-    -o-transition-delay: 0.4s;
-    transition-delay: 0.4s;
-}
-
-.main-menu .nav li.delay-5 {
-    -webkit-transition-delay: 0.5s;
-    -moz-transition-delay: 0.5s;
-    -ms-transition-delay: 0.5s;
-    -o-transition-delay: 0.5s;
-    transition-delay: 0.5s;
-}
-
-.main-menu .nav li.delay-6 {
-    -webkit-transition-delay: 0.6s;
-    -moz-transition-delay: 0.6s;
-    -ms-transition-delay: 0.6s;
-    -o-transition-delay: 0.6s;
-    transition-delay: 0.6s;
-}
-
-.main-menu .nav li.delay-7 {
-    -webkit-transition-delay: 0.7s;
-    -moz-transition-delay: 0.7s;
-    -ms-transition-delay: 0.7s;
-    -o-transition-delay: 0.7s;
-    transition-delay: 0.7s;
-}
-
-.main-menu .nav li.delay-8 {
-    -webkit-transition-delay: 0.8s;
-    -moz-transition-delay: 0.8s;
-    -ms-transition-delay: 0.8s;
-    -o-transition-delay: 0.8s;
-    transition-delay: 0.8s;
-}
-
-.main-menu .nav li.delay-9 {
-    -webkit-transition-delay: 0.9s;
-    -moz-transition-delay: 0.9s;
-    -ms-transition-delay: 0.9s;
-    -o-transition-delay: 0.9s;
-    transition-delay: 0.9s;
 }
 
 .nav-button {
@@ -537,6 +360,14 @@ body>header>div.container-fluid.p-0.m-0>nav {
     left: 50%
 }
 
+.navbar-brand {
+    font-family: 'Courgette', cursive;
+}
+
+#navbarNav {
+    font-family: sans-serif;
+}
+
 .flex-center {
     display: -webkit-box;
     display: -webkit-flex;
@@ -561,7 +392,7 @@ body>main>header>nav>div.fixed-top.main-menu>div>ul {
 .btn-circle {
     width: 70px;
     height: 70px;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     padding: 7px 16px;
     border: 2px solid transparent;
     border-radius: 100% !important;
@@ -637,7 +468,7 @@ body>main>header>nav>div.fixed-top.main-menu>div>ul {
 .intro-text {
     color: #fed136;
     font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;
-    font-size: 25px;
+    font-size: 30px;
     font-style: italic;
 }
 
@@ -663,14 +494,6 @@ body>main>header>nav>div.fixed-top.main-menu>div>ul {
     font-family: 'Recursive', sans-serif;
 }
 
-.navbar-brand {
-    font-family: 'Courgette', cursive;
-}
-
-#navbarNav {
-    font-family: sans-serif;
-}
-
 .paddingB5 {
     padding-bottom: 5% !important;
 }
@@ -692,9 +515,9 @@ h4 {
     font-weight: 900;
 }
 
-/*--------------------------------------------------------------
+/*-----------------
 # FOOTER
---------------------------------------------------------------*/
+-----------------*/
 
 body>footer {
     padding: 25px 0;
