--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -95,14 +95,32 @@ html::-webkit-scrollbar {
     background-size: cover;
     -o-background-size: cover;
 }
-
+#Data2 {
+    padding-top: 100px; 
+    padding-bottom: 140px; 
+    text-align: center; 
+}
 #Data3 {
-    /* background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover; */
+    padding-top: 120px; 
+    padding-bottom: 240px;
     background-color: black;
+}
+#Data4 { 
+    padding-top: 120px;
+    padding-bottom: 240px;
+    background: black;
+}
+
+#Data5 {
+    padding-top: 100px;
+    padding-bottom: 440px; 
+    background: black; 
 }
 
 #Data6 {
-    /* background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover; */
+    padding-top: 120px; 
+    padding-bottom: 150px; 
+    background: rgb(0, 0, 0);
 }
 
 .carouselWrapper {
@@ -582,4 +600,13 @@ body>footer>div>div>div:nth-child(3)>ul {
 
 .text-muted {
     color: #afbdc9 !important;
+}
+
+.heading-hrana {
+    font-family: 'Montserrat', cursive;
+    color: whitesmoke;
+    font-size: 50px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-weight: 900;
 }
