--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -338,6 +338,7 @@
         margin-top: 0px;
     }
 
+
     .textDesignCarasual {
         font-size: 60px;
         text-transform: uppercase;
@@ -364,6 +365,8 @@
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-/* @media only screen and (min-width: 1200px) {
-    ...
-} */
+@media only screen and (min-width: 1200px) {
+    #Data3 {
+        /* padding-top: 80px; */
+     }
+}
